--- a/app/views/static/dashboard.html.slim
+++ b/app/views/static/dashboard.html.slim
@@ -2,59 +2,48 @@
   aside.side-bar-area
     .friends-list
       p.friends-list-header FRIENDS
-      a.friend-name anbu
-      a.friend-name barath
+      - if @friends.present?
+        - @friends.each do |friend|
+          a(href="/people/#{friend.id}")= get_name(friend.id)
+          br
   .main-area
     .top-bar
       h1.top-bar-title Dashboard
       .top-bar-actions
-        button.btn.btn-primary type="button" data-bs-toggle="modal" data-bs-target="#expenseModal"  Add an expense
-        button.btn.btn-secondary type="button"  Settle up
+        button.btn.btn-primary type="button" data-bs-toggle="modal" data-bs-target="#expenseModal" Add an expense
+        button.btn.btn-primary type="button" data-bs-toggle="modal" data-bs-target="#settlementModal" Settle up
 
     .dashboard-balances
       .balances-bar
         .balance-block
           p total balance
-          p + $11.50
+          p = "$#{@total_balance}"
         .balance-block
           p you owe
-          p $0.00
+          p = "$#{@amount_you_owe}"
         .balance-block
           p you are owed
-          p $11.50
+          p = "$#{@amount_owed_to_you}"
       .dashboard-detail
         .detail-block
           h2.detail-title you owe
-          .user-detail
-            img.user-img alt="profile" src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png" /
-            .user-info
-              p anbu
-              p owes you $11.50
-          .user-detail
-            img.user-img alt="profile" src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png" /
-            .user-info
-              p anbu
-              p owes you $11.50
+          - if @expense_participants_you_owes.present?
+            - @expense_participants_you_owes.each do |participant|
+              .user-detail
+                img.user-img alt="profile" src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png"
+                .user-info
+                  p #{get_name(participant.expense.user_id)}
+                  p $#{participant[:amount_paid]}
+          
         .detail-block
           h2.detail-title you are owed
-          .user-detail
-            img.user-img alt="profile" src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png" /
-            .user-info
-              p anbu
-              p owes you $11.50
-          .user-detail
-            img.user-img alt="profile" src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png" /
-            .user-info
-              p anbu
-              p owes you $11.50
-#expenseModal.modal.fade aria-hidden="true" aria-labelledby="expenseModalLabel" tabindex="-1" 
-  .modal-dialog
-    .modal-content
-      .modal-header
-        h5#expenseModalLabel.modal-title Add an expense
-        button.btn-close aria-label="Close" data-bs-dismiss="modal" type="button" 
-      .modal-body
-        | Fields to be added
-      .modal-footer
-        button.btn.btn-secondary data-bs-dismiss="modal" type="button"  Close
-        button.btn.btn-primary type="button"  Save changes
+          - if @expense_participants_owes_you.present?
+            - @expense_participants_owes_you.each do |participant|
+              .user-detail
+                img.user-img alt="profile" src="https://cdn.icon-icons.com/icons2/1378/PNG/512/avatardefault_92824.png"
+                .user-info
+                  p #{get_name(participant[:user_id])}
+                  p $#{participant[:amount_paid]}
+
+== render 'expense_modal'
+== render 'settlement_modal'
